get line height

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         </div>
       </div>
       <button id="update-heights-btn">Update Heights</button>
+      <button id="get-heights-btn">Get Line Heights</button>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
