--- a/index.html
+++ b/index.html
@@ -7,60 +7,7 @@
     <title>CodeMirror Line Preview</title>
   </head>
   <body>
-    <div id="app">
-      <h1>CodeMirror Editor</h1>
-      <div class="editor-container">
-        <div id="editor"></div>
-        <div id="editor-preview">
-          <div id="editor-preview-line-1">
-            Preview Line 1
-            <div class="preview-line-spacer"></div>
-          </div>
-          <div id="editor-preview-line-2">
-            Preview Line 2
-            <div class="preview-line-spacer"></div>
-          </div>
-          <div id="editor-preview-line-3">
-            Preview Line 3
-            <div class="preview-line-spacer"></div>
-          </div>
-          <div id="editor-preview-line-4">
-            Preview Line 4
-            <div class="preview-line-spacer"></div>
-          </div>
-          <div id="editor-preview-line-5">
-            Preview Line 5<br />Line 5 part 2
-            <div class="preview-line-spacer"></div>
-          </div>
-          <div id="editor-preview-line-6">
-            Preview Line 6
-            <div class="preview-line-spacer"></div>
-          </div>
-          <div id="editor-preview-line-7">
-            Preview Line 7
-            <div class="preview-line-spacer"></div>
-          </div>
-          <div id="editor-preview-line-8">
-            Preview Line 8
-            <div class="preview-line-spacer"></div>
-          </div>
-          <div id="editor-preview-line-9">
-            Preview Line 9
-            <div class="preview-line-spacer"></div>
-          </div>
-          <div id="editor-preview-line-10">
-            Preview Line 10
-            <div class="preview-line-spacer"></div>
-          </div>
-          <div id="editor-preview-line-11">
-            Preview Line 11
-            <div class="preview-line-spacer"></div>
-          </div>
-        </div>
-      </div>
-      <button id="update-heights-btn">Update Heights</button>
-      <button id="get-heights-btn">Get Line Heights</button>
-    </div>
-    <script type="module" src="/src/main.ts"></script>
+    <div id="app"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
